[package]
name = "group-handler"
version = "0.1.0"
authors = ["Ked57 <kedketh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.0"
serde = "1.0.106"
serde_json = "1.0.51"
reqwest = { version = "0.10.4", features = ["json"]}
serde_derive = "1.0.106"
failure = "0.1.7"
